# gl2f-cli

./: .gitignore  .gitmodules  README.md  check_version.py  gl2f.bash  print.py  pyproject.toml  setup.py  sixel.py
.github/workflows/: build.yml  test.yml  windows.yml
dev/scripts/: build-pyinstaller.bash  check-licenses.sh  pages.py  sync-tag.sh
docs/: addon.md  boards.md  commands.md  other_boards.md
gl2f/: __init__.py  __main__.py  article.py  auth.py  blogs.py  cat.py  command_builder.py  completion.py  config.py  configurator.py  dl.py  inspect.py  local.py  ls.py  member.py  news.py  opener.py  pages.py  radio.py  search.py  terminal.py  util.py
gl2f/core/: __init__.py  article.py  auth.py  board.py  config.py  config_editors.py  date.py  lister.py  local.py  main.py  member.py  path.py  pretty.py  sixel.py  terminal.py  util.py
gl2f/core/local/: __init__.py  archive.py  content.py  fs.py  index.py  meta.py  site.py
gl2f/data/: album.html  completion.bash
gl2f/data/site/: album.html  article.html  common.js  index.html  photos.html  style.css
gl2f/data/site/asset/: modaal.css
gl2f/local/: __init__.py  archive.py
gl2f/ls/: __init__.py  board.py  domain_blogs.py  domain_news.py  domain_radio.py  ls.py  main.py  pretty.py
gl2f/util/: __init__.py  article.py  member.py  path.py  sixel.py  terminal.py
tests/: test_archive.py  test_article.py  test_board.py  test_command_builder.py  test_completion.py  test_local_media_search.py
tests/data/contents/: meta.json
tests/data/contents1/: meta.json
