[build-system]
requires = ["setuptools", 'setuptools_scm']
build-backend = "setuptools.build_meta"

[project]
name = 'gl2f'
description = 'CLI tools for GL2 family'
license = { text = 'PolyForm-Noncommercial-1.0.0' }
dynamic = ['version']
dependencies = [
	'requests',
	'libsixel-python',
	'Pillow',
	'selenium>=4.6'
]

[tool.setuptools]
packages = ['gl2f', 'gl2f.ayame']

[project.scripts]
gl2f = 'gl2f.__main__:main'

[tool.setuptools.dynamic]
version = {attr = 'gl2f.__version__.version'}

[tool.setuptools_scm]
write_to = 'gl2f/__version__.py'
