[build-system]
requires = ["setuptools", 'setuptools_scm']
build-backend = "setuptools.build_meta"

[project]
name = 'gl2f'
description = 'A command line tool for GL2 family'
license = { text = 'PolyForm-Noncommercial-1.0.0' }
readme = "README.md"
dynamic = ['version']
dependencies = [
	'requests',
	'libsixel-python',
	'Pillow',
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ['gl2f', 'gl2f.ayame']

[project.scripts]
gl2f = 'gl2f.__main__:main'

[tool.setuptools.dynamic]
version = {attr = 'gl2f.__version__.version'}

[tool.setuptools_scm]
write_to = 'gl2f/__version__.py'

[project.urls]
"Homepage" = "https://github.com/trnciii/gl2f-cli"

[project.optional-dependencies]
dev = [
	'pytest',
	'pyinstaller',
	'pipdeptree',
	'pip-licenses',
]